--- a/tipus-sobretaula.html
+++ b/tipus-sobretaula.html
@@ -31,7 +31,7 @@
          <main>
              
              <article>
-                <div class="Sobretaula"> <a href="Sobretaula.html"><img src="Configura sobretaula2.png" width="500px" height="400px" alt=""> </a></div>
+                <div class="Sobretaula"> <a href="Sobretaula.html"><img src="Configura sobretaula2-1.png" width="500px" height="400px" alt=""> </a></div>
                 
                 </div>
                 <div class="tot-en-un"> <a href="Configura-tot-en-un.html"><img src="Configura all in one.png" width="500px" height="400px"></a></div>
