--- a/Contacte.html
+++ b/Contacte.html
@@ -31,7 +31,7 @@
          <main>
              
              <article>
-                <img id="telefón" src="telefón.png" alt=" " width="140px" height="200px">
+                <img id="telefón" src="Telefón.png" alt=" " width="140px" height="200px">
               <div class="Contacte">   
                 <div class="Contacte-ns"><h2>Contacte'ns</h2></div>
                 <div class="Contacte-text"><b>Estem aquí per ajudarte i solucionar els teus problemes informàtics</b></div>
