--- a/Inici.html
+++ b/Inici.html
@@ -12,7 +12,7 @@
       <header>
         
         <nav>
-            <div class="Logo"><a href="Inici.html"><img src="logo-2.png" width="215px" height="150px"></a></div>
+            <div class="Logo"><a href="Inici-copia.html"><img src="logo-2.png" width="215px" height="150px"></a></div>
             <div class="Menú">
             <div class="Navegació">
                    
