--- a/Configura-tot-en-un.html
+++ b/Configura-tot-en-un.html
@@ -6,7 +6,7 @@
         <title>Sobretaula</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="Sobretaula.css">
+        <link rel="stylesheet" href="Configura-tot-en-un.css">
     </head>
     <body>
         <header>
@@ -121,8 +121,8 @@
 
         
 
-        <div class="Preconfigurats"> <h2>ORDINADORS PRECONFIGURATS </h2>
-            <img id="Caixa" src="Vanguard.PNG" >
+        <div class="Preconfigurats"> <h2>ORDINADORS PRE-CONFIGURATS </h2>
+            <img  id="Caixa" src="Vanguard.PNG" width="400px" height="270px">
             <div class="Components">
                 <h3> PLACA BASE</h3>
                     <p>ASUS H510T2 MINI-ITX DDR4 USB 3.2</p>
