--- a/Contacte.html
+++ b/Contacte.html
@@ -15,7 +15,7 @@
                 <div class="Menú">
                         <div class="Navegació">
                             <a href="Qui_som.html">QUI SOM</a>
-                   <a href="Contacte.html">CONTACTE'NS</a>
+                   <a href="Contacte.html">CONTACTA'NS</a>
                    <a href="Práctiques.html">PRÀCTIQUES</a>
                    <a href="Botiga.html">BOTIGA</a>
                    <a href="Descomptes.html">DESCOMPTES</a>
@@ -33,17 +33,17 @@
              <article>
                 <img id="telefón" src="Telefón.png" alt=" " width="140px" height="200px">
               <div class="Contacte">   
-                <div class="Contacte-ns"><h2>Contacte'ns</h2></div>
-                <div class="Contacte-text"><b>Estem aquí per ajudarte i solucionar els teus problemes informàtics</b></div>
-                <div class="Contacte-text"><b>Quan tinguem el teu equip reparat t'avisarem i el pots venir a buscar en: </b></div>
+                <div class="Contacte-ns"><h2>Contacta'ns</h2></div>
+                <div class="Contacte-text"><b>Estem aquí per ajudar-te i solucionar els teus problemes informàtics.</b></div>
+                <div class="Contacte-text"><b>Quan tinguem el teu equip reparat t'avisarem, i el podràs recollir a: </b></div>
                 <div class="Contacte-text"><b>Avgda Sant Julia | Granollers | Barcelona</b></div>
-                <div class="Servei-tiquet"><h2>SERVEI TIKET</h2></div>
-                <div class="Contacte-text"><p>Si vols fer-nos una consulta ens pots contactar per via tiket:</p></div>
+                <div class="Servei-ticket"><h2>SERVEI TICKET</h2></div>
+                <div class="Contacte-text"><p>Si vols fer-nos una consulta ens pots contactar per via ticket:</p></div>
                 <div class="Tiquet2"><a href="https://forms.gle/k1jpMkkNzo11d2r9A">Fes-ho aquí</a></div>
                 <div class="help-desk"><h2>HELP DESK</h2></div>
-                <div class="Contacte-text"><b>No dubits a trucar-nos si tens algún dubte, o si tens algún problema amb el teu equip, estem disponibles per a tu de dilluns a divendres de 9 del mati a 17 de la tarda, ens pots contactar per:</b><div>
+                <div class="Contacte-text"><b>No dubits a trucar-nos si tens algún dubte, o si tens algún problema amb el teu equip. Estem disponibles per a tu de dilluns a divendres de 9 del mati a 17 de la tarda, ens pots contactar per:</b><div>
                 
-                <ul class="llista">
+                <ul id="llista">
                     <li> Instagram </li>
                     <li> Mail </li>
                     <li> Twitter </li>
