--- a/Sobretaula.html
+++ b/Sobretaula.html
@@ -121,7 +121,7 @@
 
         
 
-        <div class="Preconfigurats"> <h2>ORDINADORS PRECONFIGURATS </h2>
+        <div class="Preconfigurats"> <h2>ORDINADORS PRE-CONFIGURATS </h2>
             <img id="Caixa" src="PC com silver amd ryzen.jpg" width="300px" height="300px">
             <div class="Components">
                 <h3> PLACA BASE</h3>
