--- a/Register.html
+++ b/Register.html
@@ -21,7 +21,7 @@
                    <div class="Navegació">
                        
                     <a href="Qui_som.html">QUI SOM</a>
-                   <a href="Contacte.html">CONTACTE'NS</a>
+                   <a href="Contacte.html">CONTACTA'NS</a>
                    <a href="Práctiques.html">PRÀCTIQUES</a>
                    <a href="Botiga.html">BOTIGA</a>
                    <a href="Descomptes.html">DESCOMPTES</a>
